Forgot to correct mobile spacing after changes

--- a/style.css
+++ b/style.css
@@ -555,7 +555,8 @@ option {
     display: flex;
     justify-content: center;
     margin: 5rem auto 0 auto;
-    width: 90%;
+    padding: 0;
+    width: 50%;
   }
   .form-entry {
     width: 50%;
